# ObstgartenBot

./: .env  README.md  pyproject.toml  sample.env
ObstgartenBot/: config.py  main.py
ObstgartenBot/cogs/: motd.py
